# examples

./: .gitignore
.algos/quick_sort/: main.py  notebook.ipynb
.dataStructures/hashTable/: main.py
.dataStructures/linkedList/: linkedList.ipynb  main.py
.dataStructures/stack/: main.py
.problems/hashmap/: ransomnote.py
api_framework/: package-lock.json  package.json
api_framework/src/: framework.js  framework.test.js
chrome-ext/: package-lock.json  package.json
fastapi/auth/app/: makefile  pyproject.toml
fastapi/auth/app/app/: __main__.py  auth.py  models.py
golang/FuzzTesting/: main.go  main_test.go
golang/GoFakeIt/: go.mod  main.go
golang/TextManipulation/: go.mod  main.go
golang/csvutil/: Untitled.numbers  csv.go  csv_test.go  example.csv  go.mod
golang/logging/: go.mod  main.go
htmx/: .coverage
htmx/instance/: flaskr.sqlite
htmx2/: ReadME.md  tailwind.config.js
htmx2/app/: __init__.py  auth.py  db.py  models.py
javascript/codeProblems/: index.js
javascript/decorators/: index.js
javascript/logger/: Logger.js  package.json
javascript/monad/: index.js
javascript/objects/: index.js
javascript/promises/: main.js
local-first/: main.go
poetry-demo/: pyproject.toml
python_modules/module-example/: pyproject.toml
python_modules/module-example/src/db/: db.py
python_modules/module-example/src/module_example/: main.py
python_modules/module-example/src/module_example/someModule/: mod.py  mod_too.py
sql/: crud.db  crud.sql  go.mod  main.go  makefile
sql/RSQL/: read_sql.go
swagger/: app.js  package-lock.json  package.json
(+48 files in other folders)
