[tool.poetry]
name = "module-example"
version = "0.1.0"
description = ""
authors = ["josiah <josiah@appstack.nyc>"]
readme = "README.md"
packages = [{include = "module_example", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
app = "src.module_example.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
